Add boilerplate stylesheets + scripts & Add svgs liquid setup

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -59,7 +59,7 @@
 @import "utilities/ratio";
 @import "utilities/widths";
 // @import "utilities/align";
-// @import "utilities/helpers";
+@import "utilities/helpers";
 // @import "utilities/states";
 // @import "utilities/spacing";
 // @import "utilities/print";
