--- a/www/layout/theme.liquid
+++ b/www/layout/theme.liquid
@@ -1,44 +1,62 @@
 <!doctype html>
 <html>
-<head>
-  <title>{{ page_title }}</title>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="{{ page_description | escape }}">
-  <link rel="canonical" href="{{ canonical_url }}">
-  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-  {{ content_for_header }} <!-- Header hook for plugins -->
-  {{ 'application.css' | asset_url | stylesheet_tag }}
-  {{ 'application.js' | asset_url | script_tag }}
-</head>
-<body>
+    <head>
+        <title>{{ page_title }}</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="{{ page_description | escape }}">
+        <link rel="canonical" href="{{ canonical_url }}">
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
-  {% for link in linklists.main-menu.links %}
-    {% assign child_list_handle = link.title | handleize %}
-    {% if linklists[child_list_handle].links != blank %}
-      <a href="{{ link.url }}">{{ link.title }}</a>
-      [{% for childlink in linklists[child_list_handle].links %}
-        <a href="{{ childlink.url }}">{{ childlink.title | escape }}</a>
-      {% endfor %}]
-    {% else %}
-      <a href="{{ link.url }}">{{ link.title }}</a>
-    {% endif %}
-  {% endfor %}
+        {{ content_for_header }} <!-- Header hook for plugins -->
 
-  <a href="/cart">cart</a>
+        <link id="stylesheet" rel="stylesheet" href="{{ 'main.css' | asset_url }}" media="print" onload="this.media='all'; this.onload=null; this.isLoaded=true">
+    </head>
+    <body>
+      {% comment %}
+          SVGS tags. Need to be included in templates because Shopify structure
+          doesn't allow sprite.svg in /assets
+      {% endcomment %}
+      <div class="u-none">{% include 'sprite' %}</div>
 
-  {% if shop.customer_accounts_enabled %}
-    {% if customer %}
-      <a href="/account">account</a>
-      {{ 'log out'  | customer_logout_link }}
-    {% else %}
-      {{ 'log in ' | customer_login_link }}
-      {{ 'register' | customer_register_link }}
-    {% endif %}
-  {% endif %}
 
-  <main role="main">
-    {{ content_for_layout }}
-  </main>
-</body>
+      {% comment %}
+          Start - Shopify generated code. Delete it or keep as reference
+      {% endcomment %}
+
+      {% for link in linklists.main-menu.links %}
+          {% assign child_list_handle = link.title | handleize %}
+          {% if linklists[child_list_handle].links != blank %}
+              <a href="{{ link.url }}">{{ link.title }}</a>
+                  [{% for childlink in linklists[child_list_handle].links %}
+                      <a href="{{ childlink.url }}">{{ childlink.title | escape }}</a>
+                  {% endfor %}]
+          {% else %}
+              <a href="{{ link.url }}">{{ link.title }}</a>
+          {% endif %}
+      {% endfor %}
+
+      <a href="/cart">cart</a>
+
+      {% if shop.customer_accounts_enabled %}
+          {% if customer %}
+              <a href="/account">account</a>
+              {{ 'log out'  | customer_logout_link }}
+          {% else %}
+              {{ 'log in ' | customer_login_link }}
+              {{ 'register' | customer_register_link }}
+          {% endif %}
+      {% endif %}
+
+      {% comment %}
+          End - Shopify generated code. Delete it or keep as reference
+      {% endcomment %}
+
+        <main role="main">
+            {{ content_for_layout }}
+        </main>
+
+        {{ 'vendors.js' | asset_url | script_tag }}
+        {{ 'app.js' | asset_url | script_tag }}
+    </body>
 </html>
